--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "alpinejs": "^3.4.2",
-        "autoprefixer": "^10.4.2",
+        "autoprefixer": "^10.4.14",
         "flowbite": "^1.6.5",
-        "postcss": "^8.4.6",
-        "tailwindcss": "^3.1.0"
+        "laravel-vite-plugin": "^0.7.8",
+        "postcss": "^8.4.23",
+        "tailwindcss": "^3.3.2"
     },
     "dependencies": {
+        "axios": "^1.4.0",
         "vite": "^4.3.9"
+    },
+    "scripts": {
+        "dev": "vite"
     }
 }
