--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     },
     "dependencies": {
         "axios": "^1.4.0",
-        "vite": "^4.3.9"
+        "vite": "^4.3.9",
+        "vue": "^3.2.36"
     },
     "scripts": {
         "dev": "vite"
