--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "tailwindcss": "^3.3.2"
     },
     "dependencies": {
+        "@vitejs/plugin-vue": "^4.2.3",
         "axios": "^1.4.0",
         "vite": "^4.3.9",
         "vue": "^3.2.36"
