--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
+    "private": true,
+    "scripts": {
+        "dev": "npm run development",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "prod": "npm run production",
+        "production": "mix --production"
+    },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.5.2",
-        "alpinejs": "^3.4.2",
-        "autoprefixer": "^10.4.14",
-        "flowbite": "^1.6.5",
-        "laravel-vite-plugin": "^0.7.8",
-        "postcss": "^8.4.23",
-        "tailwindcss": "^3.3.2"
+        "axios": "^0.21",
+        "laravel-mix": "^6.0.6",
+        "lodash": "^4.17.19",
+        "postcss": "^8.1.14",
+        "vue-loader": "^17.0.1"
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.2.3",
-        "axios": "^1.4.0",
-        "vite": "^4.3.9",
+        "flowbite": "^1.6.5",
+        "tailwindcss": "^3.3.2",
         "vue": "^3.2.36"
-    },
-    "scripts": {
-        "dev": "vite"
     }
 }
