--- a/package.json
+++ b/package.json
@@ -7,19 +7,26 @@
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix --production"
+        "production": "mix --production",
+        "build": "webpack"
     },
     "devDependencies": {
-        "axios": "^0.21",
+        "@popperjs/core": "^2.10.2",
+        "axios": "^0.21.4",
+        "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "vue-loader": "^17.0.1"
+        "resolve-url-loader": "^3.1.2",
+        "vue": "^2.7.14",
+        "vue-axios": "^3.5.2",
+        "vue-router": "^3.5.2",
+        "vue-loader": "^15.9.8",
+        "vue-template-compiler": "^2.6.14",
+        "vuex": "^3.6.2"
     },
     "dependencies": {
-        "@vitejs/plugin-vue": "^4.2.3",
         "flowbite": "^1.6.5",
-        "tailwindcss": "^3.3.2",
-        "vue": "^3.2.36"
+        "tailwindcss": "^3.3.2"
     }
 }
