--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
+        "@vue/compiler-sfc": "^3.3.4",
         "axios": "^0.21.4",
         "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "resolve-url-loader": "^3.1.2",
-        "vue": "^2.7.14",
+        "vue": "^3.2.36",
         "vue-axios": "^3.5.2",
+        "vue-loader": "^17.0.1",
         "vue-router": "^3.5.2",
-        "vue-loader": "^15.9.8",
         "vue-template-compiler": "^2.6.14",
         "vuex": "^3.6.2"
     },
