--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,7 @@
 {
     "/js/app.js": "/js/app.js",
+    "/css/header.css": "/css/header.css",
+    "/css/index.css": "/css/index.css",
+    "/css/footer.css": "/css/footer.css",
     "/css/app.css": "/css/app.css"
 }
