--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "build": "webpack"
     },
     "devDependencies": {
+        "@babel/types": "^7.22.4",
         "@popperjs/core": "^2.10.2",
         "@vue/compiler-sfc": "^3.3.4",
         "axios": "^0.21.4",
@@ -23,10 +24,10 @@
         "vue-axios": "^3.5.2",
         "vue-loader": "^17.0.1",
         "vue-router": "^3.5.2",
-        "vue-template-compiler": "^2.6.14",
-        "vuex": "^3.6.2"
+        "vue-template-compiler": "^2.6.14"
     },
     "dependencies": {
+        "constellations": "^0.0.1",
         "flowbite": "^1.6.5",
         "tailwindcss": "^3.3.2"
     }
