--- a/package.json
+++ b/package.json
@@ -27,8 +27,12 @@
         "vue-template-compiler": "^2.6.14"
     },
     "dependencies": {
-        "constellations": "^0.0.1",
         "flowbite": "^1.6.5",
-        "tailwindcss": "^3.3.2"
+        "fs": "^0.0.1-security",
+        "node-polyfill-webpack-plugin": "^2.0.1",
+        "tailwindcss": "^3.3.2",
+        "trendy-username": "^1.0.5",
+        "unique-username-generator": "^1.1.3",
+        "vuex": "^4.1.0"
     }
 }
