--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "devDependencies": {
         "@babel/types": "^7.22.4",
         "@popperjs/core": "^2.10.2",
+        "@tailwindcss/forms": "^0.5.2",
         "@vue/compiler-sfc": "^3.3.4",
+        "alpinejs": "^3.4.2",
+        "autoprefixer": "^10.4.2",
         "axios": "^0.21.4",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.6",
         "resolve-url-loader": "^3.1.2",
+        "tailwindcss": "^3.1.0",
         "vue": "^3.2.36",
         "vue-axios": "^3.5.2",
         "vue-loader": "^17.0.1",
