--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "flowbite": "^1.6.5",
         "fs": "^0.0.1-security",
+        "js-cookie": "^3.0.5",
         "laravel-echo": "^1.15.1",
         "node-polyfill-webpack-plugin": "^2.0.1",
         "pusher-js": "^8.0.2",
